@@ -1,3 +1,9 @@
+2016-07-08	armv4t workaround.
+
+		include/innocent-pear/rofl.h :
+		- worked around register allocation issue in rofl_impl_
+		  syscall<...>::syscall(...) when compiling for armv4t
+
 2016-07-06	Much saner pseudorandomness, and more for ptrace(...).
 
 		include/innocent-pear/bbq.h :
